# test_repo

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  test01
.clangd/index/: main.cpp.80E1E75F9DA6265C.idx
Includes/: test01.hpp
Sources/: main.cpp  test.cpp
